tests/snapshots/errors/assign_type_mismatch.mc
var x: int = 10;
x = "hello";
